<resources>
    <string name="app_name">Notes</string>
    <string name="note">Notes</string>
    <string name="link">Link</string>
    <string name="about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="password">Password</string>

    <string name="my_notes">Notes</string>
    <string name="search_here">Search...</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="edited_on">Edited on</string>
    <string name="heading">Heading</string>
    <string name="type_note_here">Type note here....</string>
    <string name="links">Links</string>
    <string name="url_demo">https:www.url.com/</string>
</resources>