<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Notes_List">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/app_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/my_notes"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_title">

                    <EditText
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="3"
                        android:background="@drawable/rounded_search"
                        android:drawableStart="@drawable/ic_round_search_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/search_here"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="textFilter"
                        android:paddingStart="18dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="5dp"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingStart="6dp"
        android:paddingBottom="5dp"
        android:transitionGroup="true"
        tools:listitem="@layout/note_item_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_no_data"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/add_not_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/fab_btn_corner"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:clipToPadding="false"
        android:focusable="true"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inner_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"
            android:elevation="0dp"
            android:src="@drawable/ic_round_add_24"
            android:tint="@color/white"
            android:tintMode="add"
            app:borderWidth="0dp"
            app:fabSize="normal" />

        <TextView
            android:id="@+id/chatFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/google_sans_regular"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:text="@string/add_note"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>