<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteContentFragmentParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Write_Notes">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbarFragmentNoteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_round_arrow_back_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lastEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/backButton"
                android:ellipsize="end"
                android:fontFamily="@font/google_sans_regular"
                android:paddingStart="13dp"
                android:paddingTop="5dp"
                android:paddingEnd="13dp"
                android:paddingBottom="5dp"
                android:text="@string/edited_on"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/fabColorPick"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/saveNote"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="7dp"
                android:src="@drawable/colour" />

            <ImageView
                android:id="@+id/saveNote"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_check_white_24dp"
                app:tint="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbarFragmentNoteContent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:fontFamily="@font/google_sans_bold"
                    android:hint="@string/heading"
                    android:textColorHint="@color/silver"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:textSize="22sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/silver"/>

                <TextView
                    android:id="@+id/get_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:fontFamily="@font/google_sans_regular"
                    android:layout_gravity="end"
                    android:hint="Date"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="top"
                    android:focusable="true"
                    android:hint="@string/type_note_here"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:minHeight="150dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</RelativeLayout>